# graphql-oauth

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  container-compose.yaml  schema.graphql
entities/: Cargo.toml
entities/src/: lib.rs  user.rs
keys/: private.key  public.key
migrations/: .env.example  Cargo.toml
migrations/src/: lib.rs  m20221113_000001_create_users_table.rs  m20221211_000002_create_id_version_index.rs
src/: app.rs  gql_set_up.rs  lib.rs  main.rs
src/auth/: mod.rs  resolver.rs  service.rs
src/auth/dtos/: change_email_input.rs  change_password_input.rs  confirm_login_input.rs  login_input.rs  mod.rs  register_input.rs  reset_password_input.rs
src/auth/guards/: auth_guard.rs  mod.rs
src/auth/helpers/: create_auth_tokens.rs  generate_two_factor_code.rs  jwt_operations.rs  mod.rs  password_hashing.rs  send_confirmation_email.rs
src/auth/models/: auth_type.rs  login_type.rs  mod.rs
src/common/: mod.rs  resolver.rs  service.rs
src/common/helpers/: get_access_user.rs  mod.rs  password_validator.rs  regexes.rs
src/common/models/: message_model.rs  mod.rs
src/config/: cache.rs  db.rs  jwt.rs  mailer.rs  mod.rs
src/loaders/: mod.rs  users_loader.rs
src/users/: mod.rs  resolver.rs  service.rs
src/users/models/: user.rs
